src/styles/blocks/nav.scss
.nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 48px;
  box-sizing: border-box;

  @include onTablet {
    width: 100%;
  }

  &__logo {
    @include onTablet {
      margin-right: 36px;
    }

    @include onMobile {
      margin-right: 16px;
    }
  }

  &__wrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;

    @include onMobile {
      justify-content: space-evenly;
    }
  }

  &__menu-button {
    font-family: Poppins, sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 30px;
    color: #fff;
    text-decoration: none;
    display: none;
    margin: auto;

    @include onTablet {
      display: block;
    }
  }

  &__list {
    display: flex;

    @include onTablet {
      display: none;
    }
  }

  &__item {
    list-style: none;
    margin-right: 48px;
    margin-bottom: 8px;

    &:last-child {
      margin-right: 0;
    }
  }

  &__link {
    font-family: Poppins, sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 13px;
    color: #fff;
    text-decoration: none;
    text-transform: uppercase;
    letter-spacing: 3px;
    line-height: 150%;
    transition: 0.3s;

    &:hover {
      color: #2060f6;
    }

    &--hire {
      &::after {
        display: block;
        content: "";
        margin-top: 8px;
        height: 2px;
        background-color: #2060f6;
        border-radius: 8px;
      }
    }
  }

  &__image {
    width: 48px;
    height: 20px;
  }
}

